hw3/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: custom-app-service
spec:
  selector:
    app: custom-app
  ports:
  - port: 80
    targetPort: 5000
  type: ClusterIP
